# HW-04

./: README.md  alembic.ini  main.py  pyproject.toml  ws_client.py  Задание 42.6.1 (HW-04) Исправления.docx  полный отчёт по Заданию 42.6.1 (HW-04).docx
api/: auth_routes.py  routes.py
core/: auth.py  logger.py  websocket_manager.py
db/: database.db  database.py
migrations/: env.py
migrations/versions/: 2233be826c0d_add_refresh_token_to_user.py  83f15bbab0b9_fix_models_visibility_for_alembic.py  a7cacfed7f68_add_indexes_for_snippets_table.py  baca3eb282c8_recreate_database_with_uuid_as_primary_.py
models/: models.py
schemas/: schemas.py
